--- a/Web_253501_Homets/Views/Shared/_Layout.cshtml
+++ b/Web_253501_Homets/Views/Shared/_Layout.cshtml
@@ -12,7 +12,13 @@
 <body>
     <header>
         <div class="container">
-            @Html.Partial("_MenuPartial")
+            <div class="container">
+                <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+                    <a class="navbar-brand" href="#">WebLabsV02</a>
+                    <partial name="_MenuPartial" />
+                    <partial name="_UserInfoPartial" />
+                </nav>
+            </div>
         </div>
     </header>
 
@@ -22,7 +28,19 @@
 
     <footer style="background-color: #343a40; color: white; padding: 20px;">
         <div class="container">
-            @Html.Partial("_UserInfoPartial")
+            <div class="navbar navbar-dark navbar-expand-md bg-dark">
+                <div class="navbar-nav ms-auto">
+                    <a class="nav-item nav-link" href="http://www.facebook.com">
+                        <i class="fa-brands fa-facebook-f fa-2x"></i>
+                    </a>
+                    <a class="nav-item nav-link" href="http://www.vk.com">
+                        <i class="fa-brands fa-vk fa-2x"></i>
+                    </a>
+                    <a class="nav-item nav-link" href="http://www.twitter.com">
+                        <i class="fa-brands fa-twitter fa-2x"></i>
+                    </a>
+                </div>
+            </div>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
