--- a/Web_253501_Homets/Views/Shared/_MenuPartial.cshtml
+++ b/Web_253501_Homets/Views/Shared/_MenuPartial.cshtml
@@ -1,47 +1,10 @@
-﻿@page
-@model Web_253501_Homets.Models.IndexViewModel
-
-@{
-    var currentAction = ViewContext.RouteData.Values["action"].ToString();
-    var currentController = ViewContext.RouteData.Values["controller"].ToString();
+﻿@{
+    var controller = ViewContext.RouteData.Values["controller"]?.ToString()?.ToLower() ?? String.Empty;
+    var area = ViewContext.RouteData.Values["area"]?.ToString()?.ToLower() ?? String.Empty;
 }
 
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">WebLabs</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" asp-controller="Home" asp-action="Index">Главная</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Product" asp-action="Index">Каталог</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Admin" asp-action="Index">Администрирование</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ms-auto">
-                @await Component.InvokeAsync("Cart")
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="~/images/default_NJl5kFf.jpg" alt="User Avatar" class="rounded-circle me-2" width="35">
-                        user@example.com
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                        <li><a class="dropdown-item" href="#">Профиль</a></li>
-                        <li><a class="dropdown-item" href="#">Настройки</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Выход</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
+<div class="navbar-nav">
+    <a class="nav-item nav-link @(controller == "home" ? "active" : "")" asp-controller="Home" asp-action="Index">Лб 1</a>
+    <a class="nav-item nav-link @(controller == "product" ? "active" : "")" asp-controller="Product" asp-action="Index">Каталог</a>
+    <a class="nav-item nav-link @(area == "admin" ? "active" : "")" asp-area="Admin" asp-page="/Index">Администрирование</a>
+</div>
