--- a/Web_253501_Homets/Views/_ViewImports.cshtml
+++ b/Web_253501_Homets/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Web_253501_Homets
 @using Web_253501_Homets.Models
 @using Web_253501_Homets.Domain.Entities
+@using System.Linq
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
