--- a/Web_253501_Homets/Views/Shared/_Layout.cshtml
+++ b/Web_253501_Homets/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Web_253501_Homets.styles.css" asp-append-version="true" />
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -31,13 +32,13 @@
             <div class="navbar navbar-dark navbar-expand-md bg-dark">
                 <div class="navbar-nav ms-auto">
                     <a class="nav-item nav-link" href="http://www.facebook.com">
-                        <i class="fa-brands fa-facebook-f fa-2x"></i>
+                        <i class="fa fa-brands fa-facebook-f fa-2x"></i>
                     </a>
                     <a class="nav-item nav-link" href="http://www.vk.com">
-                        <i class="fa-brands fa-vk fa-2x"></i>
+                        <i class="fa fa-brands fa-vk fa-2x"></i>
                     </a>
                     <a class="nav-item nav-link" href="http://www.twitter.com">
-                        <i class="fa-brands fa-twitter fa-2x"></i>
+                        <i class="fa fa-brands fa-twitter fa-2x"></i>
                     </a>
                 </div>
             </div>
